<resources>
    <string-array name="test1">
        <item>Day 1</item>
        <item>Day 2</item>
        <item>Day 3</item>
        <item>Day 4</item>
        <item>Day 5</item>
        <item>Day 6</item>
        <item>Day 7</item>
    </string-array>

    <string-array name="test2">
        <item>w1</item>
        <item>w2</item>
        <item>w3</item>
        <item>w4</item>
        <item>w5</item>
        <item>w6</item>
        <item>w7</item>
    </string-array>

    <string name="app_name">X-trainer</string>
    <string name="title_profile">Profile</string>
    <string name="title_workouts">Workouts</string>
    <string name="title_settings">Settings</string>
    <string name="button_google_signin">Sign in with Google</string>
    <string name="button_guest_signin">Sign in as Guest</string>
    <string name="button_select_workout">SELECT</string>
    <string name="button_edit_workout">EDIT</string>
    <string name="button_create_workout">Custom Workout</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">CANCEL</string>
    <string name="setting_link_google">Link Google account</string>
    <string name="setting_unlink_google">Unlink Google account</string>
    <string name="setting_google_calendar">Use Google Calendar</string>
    <string name="setting_daily_notification">Send daily notification</string>
    <string name="setting_theme">App theme</string>
    <string name="weight_input_hint">Input weight amount</string>
    <string name="custom_name_hint">Workout Name</string>
    <string name="custom_description_hint">Workout Description</string>
    <string name="workout_iso">Isolation Workout</string>
    <string name="workout_pushpull">Push Pull Workout</string>

    <string name="short_sunday">Su</string>
    <string name="short_monday">M</string>
    <string name="short_tuesday">T</string>
    <string name="short_wednesday">W</string>
    <string name="short_thursday">Th</string>
    <string name="short_friday">F</string>
    <string name="short_saturday">S</string>

    <string name="med_sunday">Sun</string>
    <string name="med_monday">Mon</string>
    <string name="med_tuesday">Tue</string>
    <string name="med_wednesday">Wed</string>
    <string name="med_thursday">Thu</string>
    <string name="med_friday">Fri</string>
    <string name="med_saturday">Sat</string>

    <string name="long_sunday">Sunday</string>
    <string name="long_monday">Monday</string>
    <string name="long_tuesday">Tuesday</string>
    <string name="long_wednesday">Wednesday</string>
    <string name="long_thursday">Thursday</string>
    <string name="long_friday">Friday</string>
    <string name="long_saturday">Saturday</string>
</resources>