<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#EEEEEE">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25pt"
        android:orientation="horizontal"
        android:layout_marginVertical="10pt">

        <ToggleButton
            android:id="@+id/select_sunday"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:textOff="@string/short_sunday"
            android:textOn="@string/short_sunday" />

        <ToggleButton
            android:id="@+id/select_monday"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:textOff="@string/short_monday"
            android:textOn="@string/short_monday"/>
        <ToggleButton
            android:id="@+id/select_tuesday"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:textOff="@string/short_tuesday"
            android:textOn="@string/short_tuesday"/>
        <ToggleButton
            android:id="@+id/select_wednesday"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:textOff="@string/short_wednesday"
            android:textOn="@string/short_wednesday"/>
        <ToggleButton
            android:id="@+id/select_thursday"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:textOff="@string/short_thursday"
            android:textOn="@string/short_thursday"/>
        <ToggleButton
            android:id="@+id/select_friday"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:textOff="@string/short_friday"
            android:textOn="@string/short_friday"/>
        <ToggleButton
            android:id="@+id/select_saturday"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:maxLines="1"
            android:textOff="@string/short_saturday"
            android:textOn="@string/short_saturday"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/custom_select_list"
        android:paddingVertical="1.5pt"
        android:layout_marginHorizontal="5pt"
        android:background="#EEEEEE"
        android:name="code.main.ui.custom."
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layoutManager="LinearLayoutManager"
        tools:context=".ui.workouts.WorkoutGroupFragment"
        tools:listitem="@layout/list_custom_select" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="30pt">

        <Button
            android:id="@+id/select_cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5pt"
            android:text="@string/button_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/select_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginHorizontal="5pt"
            android:text="@string/button_ok"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>