<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="code.main.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <activity
        android:id="@+id/navigation_workouts"
        android:name="code.main.WorkoutActivity"
        android:label="@string/title_workouts"
        tools:layout="@layout/fragment_workout_home"/>

    <activity
        android:id="@+id/navigation_settings"
        android:label="@string/title_settings"
        android:name="code.main.SignInActivity"
        tools:layout="@layout/fragment_sign_in"/>
</navigation>