<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_workouts">

    <activity
        android:id="@+id/navigation_profile"
        android:name="code.main.ProfileActivity"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_workouts"
        android:name="code.main.ui.workouts.WorkoutHomeFragment"
        android:label="@string/title_workouts"
        tools:layout="@layout/fragment_workout_home">
        <action
            android:id="@+id/action_navigation_workouts_to_workoutDetailsFragment"
            app:destination="@id/workoutDetailsFragment"
            app:popUpTo="@id/navigation_workouts"/>
    </fragment>

    <activity
        android:id="@+id/navigation_settings"
        android:label="@string/title_settings"
        android:name="code.main.SignInActivity"
        tools:layout="@layout/fragment_sign_in"/>
    <fragment
        android:id="@+id/workoutDetailsFragment"
        android:name="code.main.ui.workouts.WorkoutDetailsFragment"
        android:label="WorkoutDetailsFragment" >
        <action
            android:id="@+id/action_workoutDetailsFragment_to_workoutGroupFragment"
            app:destination="@id/workoutGroupFragment"
            app:popUpTo="@id/workoutDetailsFragment"/>
    </fragment>
    <fragment
        android:id="@+id/workoutGroupFragment"
        android:name="code.main.ui.workouts.WorkoutGroupFragment"
        android:label="WorkoutGroupFragment" >
        <action
            android:id="@+id/action_workoutGroupFragment_to_workoutExerciseFragment"
            app:destination="@id/workoutExerciseFragment"
            app:popUpTo="@id/workoutDetailsFragment"/>
    </fragment>
    <fragment
        android:id="@+id/workoutExerciseFragment"
        android:name="code.main.ui.workouts.WorkoutExerciseFragment"
        android:label="WorkoutExerciseFragment" />
</navigation>